--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -31,11 +32,11 @@
       <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" />
    </rowConstraints>
    <children>
-      <Label fx:id="user" text="user:" textAlignment="CENTER" GridPane.rowIndex="0" />
-      <Label fx:id="pass" text="password:" textAlignment="CENTER" GridPane.rowIndex="1" />
-      <Button fx:id="loginBtn" mnemonicParsing="false" onAction="#launchPrinView" text="Login" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-      <TextField GridPane.columnIndex="1" />
-      <TextField GridPane.columnIndex="1" GridPane.rowIndex="1" />
+      <Label fx:id="user" text="User:" textAlignment="CENTER" GridPane.rowIndex="0" />
+      <Label fx:id="pass" text="Password:" textAlignment="CENTER" GridPane.rowIndex="1" />
+      <Button fx:id="loginBtn" mnemonicParsing="false" onAction="#launchPrinViewLogin" text="Login" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+      <TextField fx:id="username" GridPane.columnIndex="1" />
+      <PasswordField fx:id="password" GridPane.columnIndex="1" GridPane.rowIndex="1" />
       <Button fx:id="registerBtn" mnemonicParsing="false" onAction="#launchRegisterView" text="Register" GridPane.rowIndex="3" />
    </children>
 </GridPane>
